interpreter/examples/bad/type/non_int1.dl
// non-integer expression in a wrong context
print true
